--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "@types/amqplib": "^0.5.13",
     "amqp-connection-manager": "^3.2.0",
     "amqplib": "^0.6.0"
+  },
+  "devDependencies": {
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.2"
   }
 }
